--- a/css/styles.css
+++ b/css/styles.css
@@ -10112,6 +10112,10 @@ header.masthead h1 {
   background-position: center;
 }
 
+.description {
+  line-height: 2em;
+}
+
 @media (min-width: 992px) {
   header.masthead {
     height: 100vh;
