--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "hero-new",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -364,6 +364,34 @@ h1, h2, h3, h4, h5, h6,
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 500;
   line-height: 1.2;
+}
+
+
+.welcome {
+  color: white;
+  font-family: "hero-new",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 400;
+  margin-bottom: 12px;
+  display: block;
+}
+.welcome-dark {
+  color:  #211D4F;
+  font-family: "hero-new",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 400;
+  margin-bottom: 12px;
+  display: block;
+}
+
+.welcome--dot::before {
+background-color: #98e5e7;
+border-radius: 50%;
+content: "";
+flex-shrink: 0;
+height: 10px;
+margin-right: 5px;
+margin-top: 5px;
+width: 10px;
+display: inline-block;
 }
 
 h1, .h1 {
@@ -1941,6 +1969,9 @@ pre code {
   .table-responsive-lg > .table-bordered {
     border: 0;
   }
+  .no-mobile {
+    display: ∂;
+  }
 }
 @media (max-width: 1199.98px) {
   .table-responsive-xl {
@@ -3035,6 +3066,10 @@ input[type=button].btn-block {
     right: 0;
     left: auto;
   }
+
+  .welcome {
+    margin-top: 95px;
+  }
 }
 @media (min-width: 1200px) {
   .dropdown-menu-xl-left {
@@ -3939,6 +3974,10 @@ input[type=button].btn-block {
   flex-basis: 0;
   flex-grow: 1;
   text-align: center;
+}
+
+.nav-blog {
+  
 }
 
 .tab-content > .tab-pane {
@@ -10088,18 +10127,23 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(235, 184, 0, 0.4) 0%, rgba(92, 77, 66, 0.2) 100%), url("../assets/img/desert-1.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.3) 100%), url("../assets/img/desert-4.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
 }
 header.masthead h1 {
-  font-size: 2.25rem;
+  font-size: 2.2rem;
 }
 .hero-logo {
-  width: 180px;
-  margin-bottom: 44px;
+  width: 250px;
+  isplay: block;
+  margin: auto;
+  margin-top: 22px;
+}
+.hero-logo img {
+  width: 200px;
 }
 .section-img {
   width: 75%;
@@ -10111,6 +10155,10 @@ header.masthead h1 {
   width: 90%;
   border-radius: 16px;
 
+}
+
+.png image{
+  display: none;
 }
 
 .map-section {
