--- a/css/styles.css
+++ b/css/styles.css
@@ -4034,7 +4034,7 @@ input[type=button].btn-block {
 }
 
 .nav-blog {
-  
+
 }
 
 .tab-content > .tab-pane {
@@ -10223,6 +10223,39 @@ header.masthead h1 {
   background-size: 60%;
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.blog-section {
+  position: relative;
+}
+.blog-section:before {
+  background: url("../assets/img/blog-bg.png");
+  background-position: center;
+  background-size: cover;
+  opacity: 0.3;
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.blog-section-content {
+  z-index: 100;
+}
+
+a.blog-section-content:hover {
+  text-decoration: none;
+  opacity: 0.6
+}
+
+.blog-section-content h2 {
+  font-family: serif;
+  z-index: 70;
+  font-size: 3em;
+  color: #212529;
 }
 
 .description {
