--- a/css/styles.css
+++ b/css/styles.css
@@ -2008,6 +2008,9 @@ pre code {
 @media (max-width: 767.98px) {
   .blog-section-content h2 {
     font-size: 2em;
+    width: 90%;
+    margin: auto;
+    }
   }
 
   .table-responsive-md {
@@ -2020,7 +2023,7 @@ pre code {
     border: 0;
   }
 }
-@media (max-width: 991.98px) {
+@media (max-width: 991px) {
   .table-responsive-lg {
     display: block;
     width: 100%;
@@ -2031,7 +2034,7 @@ pre code {
     border: 0;
   }
   .no-mobile {
-    display: none;
+    display: none!important;
   }
 }
 @media (max-width: 1199.98px) {
@@ -10247,7 +10250,9 @@ header.masthead h1 {
 }
 
 .blog-section-content {
-  z-index: 100;
+  display: inline-block;
+  position: relative;
+  z-index: 1000;
 }
 
 a.blog-section-content:hover {
