--- a/css/styles.css
+++ b/css/styles.css
@@ -10218,7 +10218,40 @@ header.masthead h1 {
 .description-img {
   width: 90%;
   border-radius: 16px;
+}
 
+.header-alert {
+  box-sizing: border-box;
+  margin: 0;
+  min-width: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  border-radius: 4px;
+  margin-left: 8px;
+  padding-left: 4px;
+  padding-right: 4px;
+  font-size: 12px;
+  line-height: 16px;
+  background-color: #f2ba60;
+  color: #1E2329;
+  float: right;
+}
+
+.header-alert:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: -3px;
+  top: 2px;
+  border-left: 0;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-right: 6px solid;
+  border-right-color: #f2ba60;
 }
 
 .png image{
